# SHIELD

./: CMakeLists.txt  DoubleLayerGeometry.txt  Geometry.txt  README.md  Shield.cpp  SingleLayerGeometry.txt  TripleLayerGeometry.txt  run1.mac  scorer.mac  source.mac  vis.mac
Resources/B1/include/: B1DetectorConstruction.hh  B1EventAction.hh
Resources/B1/src/: B1DetectorConstruction.cc
Resources/B3/B3a/: exampleB3a.cc
Resources/B3/B3a/include/: B3DetectorConstruction.hh  B3aActionInitialization.hh  B3aEventAction.hh  B3aRunAction.hh
Resources/B3/B3a/src/: B3DetectorConstruction.cc  B3aActionInitialization.cc  B3aEventAction.cc  B3aRunAction.cc
Resources/P03/include/: ExTGDetectorConstructionWithSD.hh
Resources/P03/src/: ExTGDetectorConstructionWithSD.cc
Resources/TestEm4/include/: PhysicsList.h
Resources/TestEm4/src/: PhysicsList.cc
include/: .Detector.h.swp  ActionInitialization.h  Analysis.h  Detector.h  EventAction.h  PhysicsList.h  RunAction.h  Source.h
src/: ActionInitialization.cpp  Detector.cpp  EventAction.cpp  PhysicsList.cpp  RunAction.cpp  Source.cpp
